--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -110,11 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = coordinates[0]"
+    "ba_latitude = coordinates"
    ]
   },
   {
