--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
     }
    ],
    "source": [
-    "neighborhood "
+    "la_boca_marker = "
    ]
   },
   {
